<resources>
    <string name="app_name">Micopi</string>
    <string name="no_friends">friends.size() == 0</string>
    <string name="invites">// Invites</string>
    <string name="your_account">// Your Account</string>
    <string name="manage_account">// Manage Account</string>
    <string name="set_name">setUsername();</string>
    <string name="set_email">setEmail();</string>
    <string name="logout">logout();</string>
    <string name="set_password">setPassword();</string>
    <string name="logo">&lt;/&gt;</string>
    <string name="sign_in">Sign In</string>
    <string name="register">&lt;register/&gt;</string>
    <string name="enter">Enter</string>
    <string name="find_game">findGame()</string>
    <string name="language_label">setLanguage()</string>
    <string name="invite_friends">inviteFriends()</string>
    <string name="accept">accept()</string>
    <string name="select_players_label">// Select players</string>
    <string name="decline">decline()</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="invite_more_friends">inviteMoreFriends()</string>
    <string name="remove_player">removePlayers()</string>
    <string name="delete_lobby">deleteLobby()</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="search_by_username">searchByUsername()</string>
    <string name="find_on_facebook">findOnFacebook()</string>
    <string name="accept_game">//GameInvite</string>
    <string name="play">play()</string>
    <string name="invite_via_message">inviteViaMessage()</string>
    <string name="search_label">//search</string>
    <string name="add">add()</string>
    <string name="done">done()</string>
    <string name="players_label">//Players</string>
    <string name="no_user_found">// No Users Found</string>
    <string name="start_game">startGame()</string>
    <string name="select_lang_label">// Select language</string>
    <string name="edit_lobby">editLobby()</string>
    <string name="difficulty_label">// Difficulty</string>
    <string name="allow_public_to_join">Allow Public to Join: </string>
    <string name="edit_lobby_label">//EditLobby</string>
    <string name="compile">compile()</string>
    <string name="info">showInfo()</string>
    <string name="save">:w</string>
    <string name="submit">submit()</string>
    <string name="select_winner">selectWinner()</string>
    <string name="select">select()</string>

</resources>

