<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/play"
        android:icon="@drawable/play"
        android:title="@string/play"
        app:showAsAction="always" />

    <item
        android:id="@+id/info"
        android:icon="@drawable/information_outline"
        app:showAsAction="always"
        android:title="@string/info" />
    <item
        android:id="@+id/save"
        android:icon="@drawable/content_save"
        app:showAsAction="always"
        android:title="@string/save" />
    <item
        android:id="@+id/submit"
        android:icon="@drawable/check"
        app:showAsAction="always"
        android:title="@string/submit" />
</menu>