<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/username_search_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splash_background"
        android:layout_weight="0">

        <TextView
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:gravity="center"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/label_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/players_label"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:layout_alignParentEnd="true"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>


    <ListView
        android:id="@+id/select_user_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:dividerHeight="0dp"
        android:paddingBottom="20dp" />

    <TextView
        android:id="@+id/selected_friends"
        android:layout_weight="0"
        android:background="@color/splash_background"
        android:textColor="@color/text_light_grey"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>