<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_grey"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/default_layout"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/splash_background"
            android:gravity="center"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/find_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_courner_rect"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:text="@string/find_game"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/invite_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_courner_rect"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:text="@string/invite_friends"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/select_lang_layout"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_select_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/splash_background"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/language_label"
            android:textColor="@color/white"
            android:textSize="22sp" />
        <ListView
            android:id="@+id/select_lang_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dividerHeight="0dp"/>

    </LinearLayout>
</LinearLayout>